# fluent-builder

./: .gitignore  Cargo.toml  Dockerfile.base  README.md  fluent-builder  fluent-compiler  justfile  whole-verification-proccess.md
crates/cli/: Cargo.toml  README.md
crates/cli/src/: docker.rs  main.rs
crates/core/: Cargo.toml  README.md  build.rs
crates/core/src/: archive.rs  blockchain.rs  builder.rs  compiler.rs  config.rs  contract.rs  git.rs  lib.rs  parser.rs  utils.rs  verify.rs
crates/core/src/artifacts/: abi.rs  interface.rs  metadata.rs  mod.rs  writer.rs
examples/power-calculator/: Cargo.toml
expected_metadata/: compile.jsonc
