[workspace.package]
edition = "2021"
version = "0.1.0"
rust-version = "1.83"

[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/cli",
]

[workspace.dependencies]
# Error handling
eyre = "0.6"
thiserror = "2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Encoding/Hashing
hex = "0.4"
sha2 = "0.10"
sha3 = "0.10"
base64 = "0.22"

# Logging
tracing = "0.1"

# Utilities
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
convert_case = "0.8.0"
walkdir = "2"

# SDK integration
fluentbase-sdk-derive-core = { git = "https://github.com/fluentlabs-xyz/fluentbase", rev = "19610a941d8c3574132ac16926b7362bc72631ab", package = "fluentbase-sdk-derive-core" }
fluentbase-types = { git = "https://github.com/fluentlabs-xyz/fluentbase", rev = "19610a941d8c3574132ac16926b7362bc72631ab", package = "fluentbase-types" }


# Rust parsing
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"

# Development
tempfile = "3.13"
toml = "0.8"
# Unused in current crates but kept for future
bytes = "1.8"
async-trait = "0.1"
derive_more = { version = "2.0", features = ["full"] }